--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.3.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -27,6 +29,8 @@
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "redis": "^4.6.5"
   },
   "devDependencies": {
