--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "leaflet": "^1.4.0",
     "lucide-react": "^0.555.0",
     "mapbox-gl": "^3.17.0",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
